# nimbus

./: README.md  pyproject.toml
nimbus/: model.ipynb
